--- a/app/src/main/res/values/donottranslate_prefs.xml
+++ b/app/src/main/res/values/donottranslate_prefs.xml
@@ -7,36 +7,36 @@
 
 <resources>
 
-    <string name="pref_default_value_empty" />
+    <string name="pref_default_value_empty" translatable="false" />
 
-    <string name="pref_key_file_list_default_directory">key_file_list_default_directory</string>
-    <string name="pref_key_file_list_persistent_drawer_open">key_file_list_persistent_drawer_open</string>
+    <string name="pref_key_file_list_default_directory" translatable="false">key_file_list_default_directory</string>
+    <string name="pref_key_file_list_persistent_drawer_open" translatable="false">key_file_list_persistent_drawer_open</string>
     <bool name="pref_default_value_file_list_persistent_drawer_open">true</bool>
-    <string name="pref_key_file_list_show_hidden_files">key_file_list_show_hidden_files</string>
+    <string name="pref_key_file_list_show_hidden_files" translatable="false">key_file_list_show_hidden_files</string>
     <bool name="pref_default_value_file_list_show_hidden_files">false</bool>
-    <string name="pref_key_file_list_sort_options">key_file_list_sort_options</string>
-    <string name="pref_key_create_archive_type">key_create_archive_type</string>
+    <string name="pref_key_file_list_sort_options" translatable="false">key_file_list_sort_options</string>
+    <string name="pref_key_create_archive_type" translatable="false">key_create_archive_type</string>
 
-    <string name="pref_key_ftp_server_state">key_ftp_server_state</string>
-    <string name="pref_key_ftp_server_anonymous_login">key_ftp_server_anonymous_login</string>
+    <string name="pref_key_ftp_server_state" translatable="false">key_ftp_server_state</string>
+    <string name="pref_key_ftp_server_anonymous_login" translatable="false">key_ftp_server_anonymous_login</string>
     <bool name="pref_default_value_ftp_server_anonymous_login">true</bool>
-    <string name="pref_key_ftp_server_username">key_ftp_server_username</string>
-    <string name="pref_default_value_ftp_server_username">admin</string>
-    <string name="pref_key_ftp_server_password">key_ftp_server_password</string>
-    <string name="pref_key_ftp_server_port">key_ftp_server_port</string>
+    <string name="pref_key_ftp_server_username" translatable="false">key_ftp_server_username</string>
+    <string name="pref_default_value_ftp_server_username" translatable="false">admin</string>
+    <string name="pref_key_ftp_server_password" translatable="false">key_ftp_server_password</string>
+    <string name="pref_key_ftp_server_port" translatable="false">key_ftp_server_port</string>
     <integer name="pref_default_value_ftp_server_port">2121</integer>
-    <string name="pref_key_ftp_server_home_directory">key_ftp_server_home_directory</string>
-    <string name="pref_key_ftp_server_writable">key_ftp_server_writable</string>
+    <string name="pref_key_ftp_server_home_directory" translatable="false">key_ftp_server_home_directory</string>
+    <string name="pref_key_ftp_server_writable" translatable="false">key_ftp_server_writable</string>
     <bool name="pref_default_value_ftp_server_writable">true</bool>
 
-    <string name="pref_key_primary_color">key_primary_color</string>
-    <string name="pref_default_value_primary_color">0</string>
-    <string name="pref_key_accent_color">key_accent_color</string>
-    <string name="pref_default_value_accent_color">0</string>
-    <string name="pref_key_material_design_2">key_material_design_2</string>
+    <string name="pref_key_primary_color" translatable="false">key_primary_color</string>
+    <string name="pref_default_value_primary_color" translatable="false">0</string>
+    <string name="pref_key_accent_color" translatable="false">key_accent_color</string>
+    <string name="pref_default_value_accent_color" translatable="false">0</string>
+    <string name="pref_key_material_design_2" translatable="false">key_material_design_2</string>
     <bool name="pref_default_value_material_design_2">true</bool>
-    <string name="pref_key_night_mode">key_night_mode</string>
-    <string name="pref_default_value_night_mode">0</string>
+    <string name="pref_key_night_mode" translatable="false">key_night_mode</string>
+    <string name="pref_default_value_night_mode" translatable="false">0</string>
     <string-array name="pref_entry_values_night_mode">
         <item>0</item>
         <item>1</item>
@@ -44,27 +44,27 @@
         <item>3</item>
         <item>4</item>
     </string-array>
-    <string name="pref_key_file_list_animation">key_file_list_animation</string>
+    <string name="pref_key_file_list_animation" translatable="false">key_file_list_animation</string>
     <bool name="pref_default_value_file_list_animation">true</bool>
-    <string name="pref_key_standard_directory_settings">key_standard_directories</string>
-    <string name="pref_key_bookmark_directories">key_bookmark_directories</string>
-    <string name="pref_key_root_strategy">key_root_strategy</string>
-    <string name="pref_default_value_root_strategy">1</string>
+    <string name="pref_key_standard_directory_settings" translatable="false">key_standard_directories</string>
+    <string name="pref_key_bookmark_directories" translatable="false">key_bookmark_directories</string>
+    <string name="pref_key_root_strategy" translatable="false">key_root_strategy</string>
+    <string name="pref_default_value_root_strategy" translatable="false">1</string>
     <string-array name="pref_entry_values_root_strategy">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
-    <string name="pref_key_archive_file_name_encoding">key_archive_file_name_encoding</string>
-    <string name="pref_default_value_archive_file_name_encoding">UTF-8</string>
-    <string name="pref_key_open_apk_default_action">key_open_apk_default_action</string>
-    <string name="pref_default_value_open_apk_default_action">2</string>
+    <string name="pref_key_archive_file_name_encoding" translatable="false">key_archive_file_name_encoding</string>
+    <string name="pref_default_value_archive_file_name_encoding" translatable="false">UTF-8</string>
+    <string name="pref_key_open_apk_default_action" translatable="false">key_open_apk_default_action</string>
+    <string name="pref_default_value_open_apk_default_action" translatable="false">2</string>
     <string-array name="pref_entry_values_open_apk_default_action">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
-    <string name="pref_key_read_remote_files_for_thumbnail">key_read_remote_files_for_thumbnail</string>
+    <string name="pref_key_read_remote_files_for_thumbnail" translatable="false">key_read_remote_files_for_thumbnail</string>
     <bool name="pref_default_value_read_remote_files_for_thumbnail">false</bool>
 </resources>
